--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SiteNote</string>
+    <string name="app_name">Blogtrotter</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_help">Help</string>
@@ -20,12 +20,12 @@
     <string name="sql_update_confirm">Note updated</string>
     <string name="location_update_confirm">Location updated</string>
     <string name="remove_tag">delete all</string>
-    <string name="title_activity_your_photo">SiteNote</string>
-    <string name="title_activity_show_note">SiteNote</string>
-    <string name="title_activity_big_map">SiteNote</string>
-    <string name="title_activity_edit_note">SiteNote</string>
-    <string name="title_activity_location_map">SiteNote</string>
-    <string name="title_activity_export_note">SiteNote</string>
+    <string name="title_activity_your_photo">Blogtrotter</string>
+    <string name="title_activity_show_note">Blogtrotter</string>
+    <string name="title_activity_big_map">Blogtrotter</string>
+    <string name="title_activity_edit_note">Blogtrotter</string>
+    <string name="title_activity_location_map">Blogtrotter</string>
+    <string name="title_activity_export_note">Blogtrotter</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>    
     <string name="neg_button">Cancel</string>
